--- a/main.html
+++ b/main.html
@@ -13,17 +13,17 @@
   <table id="table-1" class="middle">
     <tr>
       <td id="t11">left</td>
-      <td id="t12" class="centert">center</td>
+      <td id="t12" class="center right">center</td>
       <td id="t13" class="right">right</td>
     </tr>
     <tr>
       <td>left</td>
-      <td class="center">center</td>
+      <td class="center right">center</td>
       <td class="right">right</td>
     </tr>
     <tr>
       <td>left</td>
-      <td class="center">center</td>
+      <td class="center right">center</td>
       <td class="right">right</td>
     </tr>
   </table>
@@ -34,10 +34,10 @@
       <td id="t21" colspan="6"></td> 
     </tr>
     <tr>
-      <td rowspan="4"></td> <td></td> <td></td> <td></td> <td></td> <td></td>
+      <td></td> <td></td> <td></td> <td></td> <td></td> <td></td>
     </tr>
     <tr>
-      <td></td> <td colspan=3 rowspan=2></td> <td></td>
+      <td></td> <td></td> <td></td>
     </tr>
     <tr>
       <td></td> <td></td>
@@ -46,7 +46,7 @@
       <td></td> <td></td> <td></td> <td></td> <td></td>
     </tr>
     <tr>
-      <td colspan=6></td>
+      <td></td>
     </tr>
   </table>
   <br>
