--- a/main.html
+++ b/main.html
@@ -5,63 +5,118 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 	<title>HTML Assignment 3</title>
+	<style>
+		.middle{
+	margin: auto;
+	width:60%;
+}
+
+.center{
+	text-align:center;
+}
+
+.right{
+	text-align:right;
+}
+
+table{
+	border: 1px solid black;
+	border-spacing: 1px;
+}
+
+td{
+	padding: 1px;
+	border: 1px solid black;
+}
+
+.green{
+	background-color:green;
+}
+
+.blue{
+	background-color:blue;
+}
+	</style>
 </head>
 
 <body>
-	<h1 style="text-align: center;">HTML Assignment #3</h1>
- 
-  <table id="table-1" class="middle">
-    <tr>
-      <td id="t11">left</td>
-      <td id="t12" class="center right">center</td>
-      <td id="t13" class="right">right</td>
-    </tr>
-    <tr>
-      <td>left</td>
-      <td class="center right">center</td>
-      <td class="right">right</td>
-    </tr>
-    <tr>
-      <td>left</td>
-      <td class="center right">center</td>
-      <td class="right">right</td>
-    </tr>
-  </table>
-  <br>
- 
-  <table id="table-2" class="middle">
-    <tr>
-      <td id="t21" colspan="6"></td> 
-    </tr>
-    <tr>
-      <td></td> <td></td> <td></td> <td></td> <td></td> <td></td>
-    </tr>
-    <tr>
-      <td></td> <td></td> <td></td>
-    </tr>
-    <tr>
-      <td></td> <td></td>
-    </tr>
-    <tr>
-      <td></td> <td></td> <td></td> <td></td> <td></td>
-    </tr>
-    <tr>
-      <td></td>
-    </tr>
-  </table>
-  <br>
- 
-  <table id="table-3" class="middle">
-    <tr class="green">
-      <td></td>
-    </tr>
-    <tr>
-      <td id="t-image"><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="Image"></td> 
-    </tr>
-    <tr class="blue">
-      <td></td>
-    </tr>
-  </table>
+	<div class="center">
+		<strong>HTML Assignment #3</strong>
+	</div>
+	<div>
+		<table id="table-1" class="middle">
+			<tr>
+				<td id="t11">left</td>
+				<td id="t12" class="center">center</td>
+				<td id="t13" class="right">right</td>
+			</tr>
+			<tr>
+				<td id="t11">left</td>
+				<td id="t12" class="center">center</td>
+				<td id="t13" class="right">right</td>
+			</tr>
+			<tr>
+				<td id="t11">left</td>
+				<td id="t12" class="center">center</td>
+				<td id="t13" class="right">right</td>
+			</tr>
+		</table>
+
+		<p>&nbsp;</p>
+		
+		<table id="table-2" class=middle>
+			<tr>
+				<td colspan="6">&nbsp;</td>
+			</tr>
+			<tr>
+				<td rowspan="4">&nbsp;</td>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+			</tr>
+			<tr>
+				<td>&nbsp;</td>
+				<td rowspan="2" colspan="3">&nbsp;</td>
+				<td>&nbsp;</td>
+			</tr>
+			<tr>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+			</tr>
+			<tr>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+			</tr>
+			<tr>
+				<td colspan="6">&nbsp;</td>
+			</tr>
+		</table>	
+
+		<p>&nbsp;</p>
+
+		<table id="table-3" class="middle">
+			<tr>
+				<td colspan="3" class="green">&nbsp;</td>
+			</tr>
+			<tr>
+				<td rowspan="2">&nbsp;</td>
+				<td id="table-3" rowspan="2" width="250">
+					<img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="image" />
+				</td>
+			</tr>
+			<tr>
+				<td>&nbsp;</td>
+			</tr>
+			<tr>
+				<td colspan="3" class="blue">&nbsp;</td>
+			</tr>
+		</table>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
