--- a/main.html
+++ b/main.html
@@ -60,9 +60,7 @@ td{
 				<td id="t12" class="center">center</td>
 				<td id="t13" class="right">right</td>
 			</tr>
-		</table>
-
-		<p>&nbsp;</p>
+		</table><br>
 		
 		<table id="table-2" class=middle>
 			<tr>
@@ -95,10 +93,8 @@ td{
 			<tr>
 				<td colspan="6">&nbsp;</td>
 			</tr>
-		</table>	
-
-		<p>&nbsp;</p>
-
+		</table><br>
+		
 		<table id="table-3" class="middle">
 			<tr>
 				<td colspan="3" class="green">&nbsp;</td>
