--- a/main.html
+++ b/main.html
@@ -45,22 +45,22 @@ td{
 	</div>
 	<div>
 		<table id="table-1" class="middle">
-			<tr>
-				<td id="t11">left</td>
-				<td id="t12" class="center">center</td>
-				<td id="t13" class="right">right</td>
-			</tr>
-			<tr>
-				<td id="t11">left</td>
-				<td id="t12" class="center">center</td>
-				<td id="t13" class="right">right</td>
-			</tr>
-			<tr>
-				<td id="t11">left</td>
-				<td id="t12" class="center">center</td>
-				<td id="t13" class="right">right</td>
-			</tr>
-		</table><br>
+  <tr>
+    <td id="t11">left</td>
+    <td id="t12" class="center">center</td>
+    <td id="t13" class="right">right</td>
+  </tr>
+  <tr>
+    <td>left</td>
+    <td class="center">center</td>
+    <td class="right">right</td>
+  </tr>
+  <tr>
+    <td>left</td>
+    <td class="center">center</td>
+    <td class="right">right</td>
+  </tr>
+</table><br>
 		
 		<table id="table-2" class=middle>
 			<tr>
