--- a/main.html
+++ b/main.html
@@ -109,22 +109,16 @@ td{
   </table><br>
 		
 		<table id="table-3" class="middle">
-			<tr>
-				<td colspan="3" class="green">&nbsp;</td>
-			</tr>
-			<tr>
-				<td rowspan="2">&nbsp;</td>
-				<td id="table-3" rowspan="2" width="250">
-					<img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="image" />
-				</td>
-			</tr>
-			<tr>
-				<td>&nbsp;</td>
-			</tr>
-			<tr>
-				<td colspan="3" class="blue">&nbsp;</td>
-			</tr>
-		</table>
+  <tr class="green">
+    <td></td>
+  </tr>
+  <tr>
+    <td id="t-image"><img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt="Image"></td> 
+  </tr>
+  <tr class="blue">
+    <td></td>
+  </tr>
+</table>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
